Bug 1131882 - Associate ServiceWorkers with underlying ServiceWorkerInfo. r=baku

This allows controller to track state too, and provides better encapsulation.
1) Move SW setup to SWM. RuntimeService now only creates the underlying SharedWorker.
2) Require a SWInfo to create a SW. The SW holds a refptr to the info.